[package]
name = "rosetta-build"
version = "0.1.0"
edition = "2018"
license = "ISC"
description = "Code generation for the Rosetta i18n library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.4"
proc-macro2 = "1"
quote = "1"
tinyjson = "2"

[features]
default = ["rustfmt"]
rustfmt = []

[dev-dependencies]
maplit = "1"
