[package]
name = "rosetta-build"
version = "0.1.1"
description = "Code generation for the Rosetta i18n library."
categories = ["internationalization", "development-tools::build-utils", "parsing"]
keywords = ["i18n"]
authors = ["baptiste0928"]
readme = "README.md"
homepage = "https://github.com/baptiste0928/rosetta#readme"
repository = "https://github.com/baptiste0928/rosetta"
documentation = "https://docs.rs/rosetta-build"
license = "ISC"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.4"
lazy_static = "1.4"
proc-macro2 = "1"
quote = "1"
regex = "1.5"
tinyjson = "2"

[features]
default = ["rustfmt"]
rustfmt = []

[dev-dependencies]
maplit = "1"
